force-app/main/default/objects/BMCServiceDesk__SYSTemplateFieldInfo__c/BMCServiceDesk__SYSTemplateFieldInfo__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the fields related to the templates.</description>
    <label>Template Field Info</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSTemplateFieldInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>