force-app/main/default/objects/BMCServiceDesk__SYSTemplateFieldInfo__c/fields/BMCServiceDesk__fieldValue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__fieldValue__c</fullName>
    <label>Field Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>