force-app/main/default/objects/BMCServiceDesk__SYSTemplateFieldInfo__c/fields/BMCServiceDesk__FKSYSTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSYSTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKSYSTemplate</label>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipLabel>SYSTemplateFieldInfo</relationshipLabel>
    <relationshipName>SYSTemplateFieldInfo</relationshipName>
    <type>Lookup</type>
</CustomField>