force-app/main/default/objects/BMCServiceDesk__SYSTemplateFieldInfo__c/fields/BMCServiceDesk__From_Import__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__From_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used internally to control trigger action configured for importing templates from RF Template Migration package.</description>
    <inlineHelpText>Internally used</inlineHelpText>
    <label>From import</label>
    <type>Checkbox</type>
</CustomField>